Fix sidebar social links: remove white span color, add padding
- Remove span color rule that made text white/invisible
- Add vertical padding (5px) to list item links for spacing

--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -105,14 +105,10 @@
       }
 
       a {
-        padding: 0px;
+        padding: 5px 0;
         display: block;
         color: rgba(0, 0, 0, 1);
         border-bottom: 1px solid rgba(0, 0, 0, .05);
-
-        span {
-          color: $white;
-        }
       }
 
       &.active {
